--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.0",
-    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^6.4.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@sanity/client": "^6.27.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.72.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "import-data": "^1.0.0",
     "lucide-react": "^0.474.0",
@@ -41,11 +41,14 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
     "@types/redux-persist": "^4.0.0",
+    "babel-loader": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-loader": "^9.5.2",
     "typescript": "^5",
-    "webpack": "^5.97.1"
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
